[project]
name = "isolated-node-unregister"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AwaisShakeel12", email = "awais.ok612@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google>=3.0.0",
    "langchain-core>=0.3.60",
    "langchain-google-genai>=2.1.4",
    "langgraph>=0.4.5",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
]


[project.scripts]
node = "isolated_node_unregister.main_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
